// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Heading UU5.Bricks.Heading - onScrollToBlocked() 1`] = `
<Heading
  className={null}
  content="Bricks.Heading"
  controlled={true}
  disabled={false}
  dynamic={false}
  fixed={false}
  fixedOnScroll={true}
  hidden={false}
  hideOnScroll={false}
  hideOnScrollOffset={64}
  id={null}
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onScrollToBlocked={[Function]}
  onScrollToFixed={[Function]}
  pureRender={false}
  ref_={null}
  selected={false}
  spaceHolder={false}
  style={
    Object {
      "backgroundColor": "cornflowerblue",
      "padding": "10px",
    }
  }
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Heading UU5.Bricks.Heading - onScrollToBlocked() 2`] = `
<Heading
  className={null}
  content="Bricks.Heading"
  controlled={true}
  disabled={false}
  dynamic={false}
  fixed={false}
  fixedOnScroll={true}
  hidden={false}
  hideOnScroll={false}
  hideOnScrollOffset={64}
  id={null}
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onScrollToBlocked={[Function]}
  onScrollToFixed={[Function]}
  pureRender={false}
  ref_={null}
  selected={false}
  spaceHolder={false}
  style={
    Object {
      "backgroundColor": "cornflowerblue",
      "padding": "10px",
    }
  }
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Heading UU5.Bricks.Heading - onScrollToFixed() 1`] = `
<Heading
  className={null}
  content="Bricks.Heading"
  controlled={true}
  disabled={false}
  dynamic={false}
  fixed={false}
  fixedOnScroll={true}
  hidden={false}
  hideOnScroll={false}
  hideOnScrollOffset={64}
  id={null}
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onScrollToBlocked={[Function]}
  onScrollToFixed={[Function]}
  pureRender={false}
  ref_={null}
  selected={false}
  spaceHolder={false}
  style={
    Object {
      "backgroundColor": "cornflowerblue",
      "padding": "10px",
    }
  }
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Heading UU5.Bricks.Heading - onScrollToFixed() 2`] = `
<Heading
  className={null}
  content="Bricks.Heading"
  controlled={true}
  disabled={false}
  dynamic={false}
  fixed={false}
  fixedOnScroll={true}
  hidden={false}
  hideOnScroll={false}
  hideOnScrollOffset={64}
  id={null}
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onScrollToBlocked={[Function]}
  onScrollToFixed={[Function]}
  pureRender={false}
  ref_={null}
  selected={false}
  spaceHolder={false}
  style={
    Object {
      "backgroundColor": "cornflowerblue",
      "padding": "10px",
    }
  }
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Heading checkGrammar 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading checkGrammar 2`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading checkGrammar 3`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading checkGrammar 4`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading checkHighlight 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading checkHighlight 2`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading checkHighlight 3`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading checkHighlight 4`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading checkSpaces 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading checkSpaces 2`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading checkSpaces 3`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading checkSpaces 4`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading className 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading my-classname"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading content 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  >
    12345
  </div>
</Fragment>
`;

exports[`UU5.Bricks.Heading content 2`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="This is Content from ContentMixin"
    />
  </div>
</Fragment>
`;

exports[`UU5.Bricks.Heading content 3`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="This is Content from ContentMixin"
    />
  </div>
</Fragment>
`;

exports[`UU5.Bricks.Heading content 4`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  >
    12345
  </div>
</Fragment>
`;

exports[`UU5.Bricks.Heading controlled 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading controlled 2`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading controlled 3`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading controlled 4`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading default props 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading disabled 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading uu5-common-disabled"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  >
    <span
      className="uu5-common-disabled-cover"
      key="disabledCover"
    />
  </div>
</Fragment>
`;

exports[`UU5.Bricks.Heading disabled 2`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading disabled 3`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading disabled 4`] = `
<Fragment>
  <div
    className="uu5-bricks-heading uu5-common-disabled"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  >
    <span
      className="uu5-common-disabled-cover"
      key="disabledCover"
    />
  </div>
</Fragment>
`;

exports[`UU5.Bricks.Heading docKit examples UU5.Bricks.Heading example01 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID01"
  style={Object {}}
  title={null}
>
  <Heading
    className={null}
    content="Fixed"
    controlled={true}
    disabled={false}
    dynamic={false}
    fixed={true}
    fixedOnScroll={false}
    hidden={false}
    hideOnScroll={false}
    hideOnScrollOffset={64}
    id="uuID"
    ignoreInnerHTML={false}
    key="uuID"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    onScrollToBlocked={null}
    onScrollToFixed={null}
    pureRender={false}
    ref_={null}
    selected={false}
    spaceHolder={false}
    style={
      Object {
        "backgroundColor": "cornflowerblue",
        "padding": "10px",
      }
    }
    tooltip={null}
  />
  <Paragraph
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID02"
    ignoreInnerHTML={false}
    key="uuID02"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.Heading dynamic 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading dynamic 2`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading dynamic 3`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading dynamic 4`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading fixed 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading uu5-bricks-heading-fixed"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
  <div
    className="uu5-bricks-heading-ghost"
    key="ghost"
    style={
      Object {
        "height": null,
      }
    }
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading fixed 2`] = `
<Fragment>
  <div
    className="uu5-bricks-heading uu5-bricks-heading-fixed"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
  <div
    className="uu5-bricks-heading-ghost"
    key="ghost"
    style={
      Object {
        "height": null,
      }
    }
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading fixed 3`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading fixed 4`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading fixedOnScroll 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading fixedOnScroll 2`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading fixedOnScroll 3`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading fixedOnScroll 4`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading hidden 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading uu5-common-hidden"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading hidden 2`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading hidden 3`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading hidden 4`] = `
<Fragment>
  <div
    className="uu5-bricks-heading uu5-common-hidden"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading hideOnScroll 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading hideOnScroll 2`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading hideOnScroll 3`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading hideOnScroll 4`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading id 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="myId"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading ignoreHTML 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading ignoreHTML 2`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading ignoreHTML 3`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading ignoreHTML 4`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading mainAttrs 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading name 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    name="myName"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading nestingLevel 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading nestingLevel 2`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading nestingLevel 3`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading nestingLevel 4`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading nestingLevel 5`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading nestingLevel 6`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading nestingLevel 7`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading nestingLevel 8`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading nestingLevel 9`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading nestingLevel 10`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading nestingLevel 11`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading nestingLevel 12`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading nestingLevel 13`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading nestingLevel 14`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading nestingLevel 15`] = `""`;

exports[`UU5.Bricks.Heading nestingLevel 16`] = `""`;

exports[`UU5.Bricks.Heading nestingLevel 17`] = `""`;

exports[`UU5.Bricks.Heading nestingLevel 18`] = `""`;

exports[`UU5.Bricks.Heading nestingLevel 19`] = `""`;

exports[`UU5.Bricks.Heading nestingLevel 20`] = `""`;

exports[`UU5.Bricks.Heading noIndex 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading uu5-noindex"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading noIndex 2`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading noIndex 3`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading noIndex 4`] = `
<Fragment>
  <div
    className="uu5-bricks-heading uu5-noindex"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading pureRender 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading pureRender 2`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading pureRender 3`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading pureRender 4`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading selected 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading uu5-common-selected"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading selected 2`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading selected 3`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading selected 4`] = `
<Fragment>
  <div
    className="uu5-bricks-heading uu5-common-selected"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading spaceHolder 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading spaceHolder 2`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading spaceHolder 3`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading spaceHolder 4`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading style 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={
      Object {
        "borderRadius": "2px",
        "padding": "8px",
      }
    }
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading style 2`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={
      Object {
        "backgroundColor": "red",
        "color": "blue",
      }
    }
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading style 3`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={
      Object {
        "backgroundColor": "red",
        "color": "blue",
      }
    }
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading style 4`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={
      Object {
        "borderRadius": "2px",
        "padding": "8px",
      }
    }
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading textCorrector 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading textCorrector 2`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading textCorrector 3`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading textCorrector 4`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading tooltip 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title="My Tooltip"
  />
</Fragment>
`;
